# zapiski-ai-auth

./: .example.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  auth.py  billing_listener.py  config.py  database.py  graphql_schema.py  main.py  models.py  schemas.py  user_verification.proto  user_verification_pb2_grpc.py
